--- a/src/app/rate-us/rate-us.component.html
+++ b/src/app/rate-us/rate-us.component.html
@@ -1,22 +1,34 @@
 <div class="rating-container">
-  <h2 class="center-text">🔔 Rate Us</h2>
+  <h2 class="center-text">🔔 Rate {{ user?.name }}</h2>
 
-  <div class="stars">
-    <ng-container *ngFor="let star of [1,2,3,4,5]">
+  <p><strong>ID:</strong> {{ user?.id }}</p>
+  <p><strong>Email:</strong> {{ user?.email }}</p>
+  <p><strong>Role:</strong> {{ user?.role }}</p>
+
+  <div class="stars" role="radiogroup" aria-label="Star Rating">
+    <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
       <span
+        role="radio"
+        [attr.aria-checked]="star === rating"
+        tabindex="0"
         (click)="setRating(star)"
         (mouseover)="setHover(star)"
         (mouseleave)="clearHover()"
         [class.filled]="star <= (hovered || rating)"
-      >&#9733;</span>
+        style="cursor: pointer;"
+        >&#9733;</span>
     </ng-container>
   </div>
 
   <p *ngIf="rating > 0" class="rating-message">
-    You rated us {{ rating }} star(s). Thank you!
+    You rated {{ rating }} star(s). Thank you!
   </p>
 
   <div *ngIf="rating > 0" class="emoji">
     {{ getEmoji(rating) }}
+  </div>
+
+  <div class="button-group" style="margin-top: 20px;">
+    <button (click)="goBack()">⬅ Back</button>
   </div>
 </div>
