added angular application

--- a/src/app/dashbord/dashbord.component.html
+++ b/src/app/dashbord/dashbord.component.html
@@ -32,7 +32,7 @@
     </ul>
   </aside>
 
-  <!-- Main content -->
+  <!-- Main Content -->
   <main style="flex-grow: 1; padding: 20px;">
     <router-outlet></router-outlet>
   </main>
